<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="32dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".imccalculator.imcCalculatorActivity">

    <!--CardView de Male-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/background_component">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                app:tint="@color/white"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_male"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    <!--CardView de Female-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/background_component">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                app:tint="@color/white"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_female"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    <!--Slider para tamanyo-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMale"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text">
            </TextView>

            <TextView
                android:id="@+id/tvHeight"
                android:text="120cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <com.google.android.material.slider.RangeSlider
                android:contentDescription="Este slider presenta la altura"
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom= "120"
                android:valueTo= "200">

            </com.google.android.material.slider.RangeSlider>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <!--Este va a ser el peso-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewAge"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text">
            </TextView>

            <TextView
                android:id="@+id/tvWeight"
                tools:text="50kg"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:contentDescription="Este botón sirve para quitar peso"
                    android:id="@+id/btnSubtractWeight"
                    app:backgroundTint="@color/purple_500"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:contentDescription="Este botón es para añadir peso"
                    android:id="@+id/btnPlusWeight"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <!--Este va a ser la edad-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toEndOf="@+id/viewWeight"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text">
            </TextView>

            <TextView
                android:id="@+id/tvAge"
                tools:text="30"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:contentDescription="Este botón sirve quitar edad"
                    android:id="@+id/btnSubtractAge"
                    app:backgroundTint="@color/purple_500"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:contentDescription="Este botón sirve para añadir edad"
                    android:id="@+id/btnPlusAge"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!--Botón calcular-->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
